# reader

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  style.css
frontend/src/components/: index.ts
frontend/src/components/bookCard/: BookCard.tsx  style.scss
frontend/src/components/navbar/: Breadcrubs.tsx  Breadcrumbs.tsx  Navbar.tsx  types.ts
frontend/src/pages/: index.tsx
frontend/src/pages/books/: BookPage.tsx  BooksPage.tsx  types.ts
frontend/src/pages/home/: HomePage.tsx
frontend/src/support/: caller.ts
reader/: __init__.py  app.py  config.py
reader/alembic/: alembic.ini  env.py
reader/alembic/versions/: 2025_01_18_1324-8e3f5d72efaf_init.py  2025_09_06_1153-19c81a92af23_add_views_field_to_book.py
reader/cli/: main.py
reader/models/: main.py
reader/templates/: index.html
reader/views/: api.py  schemas.py  views.py
requirements/: base.txt  development.in  development.txt
