[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reader"
dynamic = ["version"]
keywords = ["reader", "files", "library"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

authors = [{ email = "dmitriyvasil@gmail.com" }]
maintainers = [{ email = "dmitriyvasil@gmail.com" }]
description = "Library reader"

readme = "Readme.md"
license = { file = "LICENSE" }

requires-python = ">=3.9,<3.14"
dependencies = [
    "click>=8.0.3",
    "flask>=2.2.5, <3.0.0",
    "flask-appbuilder>=4.4.1, <5.0.0",
    "flask-migrate>=3.1.0, <4.0",
    "pydash>=8.0",
    "sqlalchemy>=1.4, <2",
]

[tool.hatch.version]
path = "reader/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["reader"]

[project.scripts]
reader = "reader.cli.main:main"

[project.urls]
Homepage = "https://github.com/dmitriyVasilievich1986/reader"
